--- a/app/views/games/_roundvoteshort.html.erb
+++ b/app/views/games/_roundvoteshort.html.erb
@@ -11,7 +11,7 @@
         (Category: <span class="gamecategories"><%= @game.r1cat %></span>)<br>
         <% @gameanswers.shuffle.each do |answer| %>
           <% if answer.r1answer %>
-            <div id="votebutton1div">
+            <div class="votebutton1div">
               <%= button_to "Vote", {:controller => "gamedata", :action => "vote", :user_id => answer.user_id, :method => "post", :round => "round1", :game_id => @game.id, :r1voted => true}, :class => "votebuttons", remote: true %>
             </div>
             "<%= Obscenity.replacement(:stars).sanitize(answer.r1answer) %>"
@@ -37,7 +37,7 @@
         (Category: <span class="gamecategories"><%= @game.r2cat %></span>)<br>
         <% @gameanswers.shuffle.each do |answer| %>
           <% if answer.r2answer %>
-            <div id="votebutton2div">
+            <div class="votebutton2div">
             <%= button_to "Vote", {:controller => "gamedata", :action => "vote", :user_id => answer.user_id, :method => "post", :round => "round2", :game_id => @game.id, :r2voted => true}, :class => "votebuttons", remote: true %>
             </div>
             "<%= Obscenity.replacement(:stars).sanitize(answer.r2answer) %>"
@@ -63,7 +63,7 @@
         (Category: <span class="gamecategories"><%= @game.r3cat %></span>)<br>
         <% @gameanswers.shuffle.each do |answer| %>
           <% if answer.r3answer %>
-            <div id="votebutton3div">
+            <div class="votebutton3div">
             <%= button_to "Vote", {:controller => "gamedata", :action => "vote", :user_id => answer.user_id, :method => "post", :round => "round3", :game_id => @game.id, :r3voted => true}, :class => "votebuttons", remote: true %>
             </div>
             "<%= Obscenity.replacement(:stars).sanitize(answer.r3answer) %>"
@@ -89,7 +89,7 @@
         (Category: <span class="gamecategories"><%= @game.r4cat %></span>)<br>
         <% @gameanswers.shuffle.each do |answer| %>
           <% if answer.r4answer %>
-            <div id="votebutton4div">
+            <div class="votebutton4div">
             <%= button_to "Vote", {:controller => "gamedata", :action => "vote", :user_id => answer.user_id, :method => "post", :round => "round4", :game_id => @game.id, :r4voted => true}, :class => "votebuttons", remote: true %>
             </div>
             "<%= Obscenity.replacement(:stars).sanitize(answer.r4answer) %>"
