--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -349,6 +349,10 @@
   #round7results, #round8results {
     display: none;
   }
+  .novotefrown img {
+    width: 20px;
+    height: 20px;
+  }
   .maingamespage {
     width: 60%;
     margin: 0 auto;
