--- a/app/views/games/_roundresultsshort.html.erb
+++ b/app/views/games/_roundresultsshort.html.erb
@@ -62,7 +62,11 @@
         <% Gamedata.where(:game_id => @game.id).order('r1points DESC').zip(@ranknumbers).each do |answer, n| %>
           <tr>
             <td><%= n %></td>
-            <td><%= User.where(:id => answer.user_id).first.username %></td>
+            <td><%= User.where(:id => answer.user_id).first.username %>
+              <% if Gamedata.where(:game_id => @game.id).where(:user_id => user_id).first.r1votedfor == 0 %>
+                <span class="novotefrown"><%= image_tag("emoji/anguished.png") %></span>
+              <% end %>
+            </td>
             <td>
               <% if @round1winner.id == User.where(:id => answer.user_id).first.id %>
                 <%= answer.r1points - 3 %>
@@ -110,7 +114,11 @@
         <% Gamedata.where(:game_id => @game.id).order('r2points DESC').zip(@ranknumbers).each do |answer, n| %>
           <tr>
             <td><%= n %></td>
-            <td><%= User.where(:id => answer.user_id).first.username %></td>
+            <td><%= User.where(:id => answer.user_id).first.username %>
+              <% if Gamedata.where(:game_id => @game.id).where(:user_id => user_id).first.r2votedfor == 0 %>
+                <span class="novotefrown"><%= image_tag("emoji/anguished.png") %></span>
+              <% end %>
+            </td>
             <td>
               <% if @round2winner.id == User.where(:id => answer.user_id).first.id %>
                 <%= answer.r2points - 4 %>
@@ -158,7 +166,11 @@
         <% Gamedata.where(:game_id => @game.id).order('r3points DESC').zip(@ranknumbers).each do |answer, n| %>
           <tr>
             <td><%= n %></td>
-            <td><%= User.where(:id => answer.user_id).first.username %></td>
+            <td><%= User.where(:id => answer.user_id).first.username %>
+              <% if Gamedata.where(:game_id => @game.id).where(:user_id => user_id).first.r3votedfor == 0 %>
+                <span class="novotefrown"><%= image_tag("emoji/anguished.png") %></span>
+              <% end %>
+            </td>
             <td>
               <% if @round3winner.id == User.where(:id => answer.user_id).first.id %>
                 <%= answer.r3points - 5 %>
@@ -206,7 +218,11 @@
         <% Gamedata.where(:game_id => @game.id).order('r4points DESC').zip(@ranknumbers).each do |answer, n| %>
           <tr>
             <td><%= n %></td>
-            <td><%= User.where(:id => answer.user_id).first.username %></td>
+            <td><%= User.where(:id => answer.user_id).first.username %>
+              <% if Gamedata.where(:game_id => @game.id).where(:user_id => user_id).first.r4votedfor == 0 %>
+                <span class="novotefrown"><%= image_tag("emoji/anguished.png") %></span>
+              <% end %>
+            </td>
             <td>
               <% if @round4winner.id == User.where(:id => answer.user_id).first.id %>
                 <%= answer.r4points - 6 %>
