--- a/app/views/games/_roundresultsshort.html.erb
+++ b/app/views/games/_roundresultsshort.html.erb
@@ -63,7 +63,7 @@
           <tr>
             <td><%= n %></td>
             <td><%= User.where(:id => answer.user_id).first.username %>
-              <% if Gamedata.where(:game_id => @game.id).where(:user_id => user_id).first.r1votedfor == 0 %>
+              <% if Gamedata.where(:game_id => @game.id).where(:user_id => answer.user_id).first.r1votedfor == 0 %>
                 <span class="novotefrown"><%= image_tag("emoji/anguished.png") %></span>
               <% end %>
             </td>
@@ -90,6 +90,7 @@
         <% end %>
       </tbody>
     </table>
+    <span class="novotefrown"><%= image_tag("emoji/anguished.png") %></span> = non-voter
   </div>
 
   <!-- Round 2 results -->
@@ -115,7 +116,7 @@
           <tr>
             <td><%= n %></td>
             <td><%= User.where(:id => answer.user_id).first.username %>
-              <% if Gamedata.where(:game_id => @game.id).where(:user_id => user_id).first.r2votedfor == 0 %>
+              <% if Gamedata.where(:game_id => @game.id).where(:user_id => answer.user_id).first.r2votedfor == 0 %>
                 <span class="novotefrown"><%= image_tag("emoji/anguished.png") %></span>
               <% end %>
             </td>
@@ -142,6 +143,7 @@
         <% end %>
       </tbody>
     </table>
+    <span class="novotefrown"><%= image_tag("emoji/anguished.png") %></span> = non-voter
   </div>
 
   <!-- Round 3 results -->
@@ -167,7 +169,7 @@
           <tr>
             <td><%= n %></td>
             <td><%= User.where(:id => answer.user_id).first.username %>
-              <% if Gamedata.where(:game_id => @game.id).where(:user_id => user_id).first.r3votedfor == 0 %>
+              <% if Gamedata.where(:game_id => @game.id).where(:user_id => answer.user_id).first.r3votedfor == 0 %>
                 <span class="novotefrown"><%= image_tag("emoji/anguished.png") %></span>
               <% end %>
             </td>
@@ -194,6 +196,7 @@
         <% end %>
       </tbody>
     </table>
+    <span class="novotefrown"><%= image_tag("emoji/anguished.png") %></span> = non-voter
   </div>
 
   <!-- Round 4 results -->
@@ -219,7 +222,7 @@
           <tr>
             <td><%= n %></td>
             <td><%= User.where(:id => answer.user_id).first.username %>
-              <% if Gamedata.where(:game_id => @game.id).where(:user_id => user_id).first.r4votedfor == 0 %>
+              <% if Gamedata.where(:game_id => @game.id).where(:user_id => answer.user_id).first.r4votedfor == 0 %>
                 <span class="novotefrown"><%= image_tag("emoji/anguished.png") %></span>
               <% end %>
             </td>
@@ -246,6 +249,7 @@
         <% end %>
       </tbody>
     </table>
+    <span class="novotefrown"><%= image_tag("emoji/anguished.png") %></span> = non-voter
   </div>
 
 </div>
