fixed vote reporting in results

--- a/app/views/games/_roundresultslong.html.erb
+++ b/app/views/games/_roundresultslong.html.erb
@@ -80,11 +80,8 @@
               <% end %>
             </td>
             <td>
-              <% if @round1winner.id == User.where(:id => answer.user_id).first.id %>
-                <%= answer.r1points - 3 %>
-              <% elsif @r1winnervoters.include? User.where(:id => answer.user_id).first.id %>
-                <%= answer.r1points - 1 %>
-              <% end %>
+              <%= Gamedata.where(:game_id => @game.id).where(:r1votedfor => answer.user_id)
+                        .collect(&:r1votedfor).count %>
             </td>
             <td>
               <% if @round1winner.id == User.where(:id => answer.user_id).first.id %>
@@ -133,11 +130,8 @@
               <% end %>
             </td>
             <td>
-              <% if @round2winner.id == User.where(:id => answer.user_id).first.id %>
-                <%= answer.r2points - 4 %>
-              <% elsif @r2winnervoters.include? User.where(:id => answer.user_id).first.id %>
-                <%= answer.r2points - 1 %>
-              <% end %>
+              <%= Gamedata.where(:game_id => @game.id).where(:r2votedfor => answer.user_id)
+                        .collect(&:r2votedfor).count %>
             </td>
             <td>
               <% if @round2winner.id == User.where(:id => answer.user_id).first.id %>
@@ -186,11 +180,8 @@
               <% end %>
             </td>
             <td>
-              <% if @round3winner.id == User.where(:id => answer.user_id).first.id %>
-                <%= answer.r3points - 5 %>
-              <% elsif @r3winnervoters.include? User.where(:id => answer.user_id).first.id %>
-                <%= answer.r3points - 1 %>
-              <% end %>
+              <%= Gamedata.where(:game_id => @game.id).where(:r3votedfor => answer.user_id)
+                        .collect(&:r3votedfor).count %>
             </td>
             <td>
               <% if @round3winner.id == User.where(:id => answer.user_id).first.id %>
@@ -239,11 +230,8 @@
               <% end %>
             </td>
             <td>
-              <% if @round4winner.id == User.where(:id => answer.user_id).first.id %>
-                <%= answer.r4points - 6 %>
-              <% elsif @r4winnervoters.include? User.where(:id => answer.user_id).first.id %>
-                <%= answer.r4points - 1 %>
-              <% end %>
+              <%= Gamedata.where(:game_id => @game.id).where(:r4votedfor => answer.user_id)
+                        .collect(&:r4votedfor).count %>
             </td>
             <td>
               <% if @round4winner.id == User.where(:id => answer.user_id).first.id %>
@@ -292,11 +280,8 @@
               <% end %>
             </td>
             <td>
-              <% if @round5winner.id == User.where(:id => answer.user_id).first.id %>
-                <%= answer.r5points - 3 %>
-              <% elsif @r5winnervoters.include? User.where(:id => answer.user_id).first.id %>
-                <%= answer.r5points - 1 %>
-              <% end %>
+              <%= Gamedata.where(:game_id => @game.id).where(:r5votedfor => answer.user_id)
+                        .collect(&:r5votedfor).count %>
             </td>
             <td>
               <% if @round5winner.id == User.where(:id => answer.user_id).first.id %>
@@ -345,11 +330,8 @@
               <% end %>
             </td>
             <td>
-              <% if @round6winner.id == User.where(:id => answer.user_id).first.id %>
-                <%= answer.r6points - 4 %>
-              <% elsif @r6winnervoters.include? User.where(:id => answer.user_id).first.id %>
-                <%= answer.r6points - 1 %>
-              <% end %>
+              <%= Gamedata.where(:game_id => @game.id).where(:r6votedfor => answer.user_id)
+                        .collect(&:r6votedfor).count %>
             </td>
             <td>
               <% if @round6winner.id == User.where(:id => answer.user_id).first.id %>
@@ -398,11 +380,8 @@
               <% end %>
             </td>
             <td>
-              <% if @round7winner.id == User.where(:id => answer.user_id).first.id %>
-                <%= answer.r7points - 5 %>
-              <% elsif @r7winnervoters.include? User.where(:id => answer.user_id).first.id %>
-                <%= answer.r7points - 1 %>
-              <% end %>
+              <%= Gamedata.where(:game_id => @game.id).where(:r7votedfor => answer.user_id)
+                        .collect(&:r7votedfor).count %>
             </td>
             <td>
               <% if @round7winner.id == User.where(:id => answer.user_id).first.id %>
@@ -451,11 +430,8 @@
               <% end %>
             </td>
             <td>
-              <% if @round8winner.id == User.where(:id => answer.user_id).first.id %>
-                <%= answer.r8points - 6 %>
-              <% elsif @r8winnervoters.include? User.where(:id => answer.user_id).first.id %>
-                <%= answer.r8points - 1 %>
-              <% end %>
+              <%= Gamedata.where(:game_id => @game.id).where(:r8votedfor => answer.user_id)
+                        .collect(&:r8votedfor).count %>
             </td>
             <td>
               <% if @round8winner.id == User.where(:id => answer.user_id).first.id %>
