added players list in game

--- a/app/views/games/_roundplaylong.html.erb
+++ b/app/views/games/_roundplaylong.html.erb
@@ -492,7 +492,11 @@
       </div>
     </div>
     <span class="timeremaining">Time left to play: <%= @timeremaining %>.</span><br>
-    # of players: <%= @game.playercount %>/12
+    # of players: <%= @game.playercount %> of 12:
+    <% @players.each do |player| %>
+      <%= User.where(:id => player).first.username %>
+      <%= "," unless player == @players.last %>
+    <% end %>
 
     <script>
       var timeleft = <%= (((@game.playendtime - DateTime.now.utc).round) * 1000) + 1500 %>
